# SophgenV3

./: .env-example  .gitignore  .local_env.ps1  Dockerfile  README.md  compose.yml  env.ps1  main.py  pyproject.toml  start.ps1
data/: cwe_data.json  sophgen.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CWETag.jsx  Layout.jsx  Table.jsx
frontend/src/pages/: Condensed.jsx  CondensedDetail.jsx  Dashboard.jsx  Generation.jsx  InjectionDetail.jsx  InjectionGroup.jsx  Injections.jsx  Placeholder.jsx  Research.jsx  ResearchDetail.jsx  ValidationDetail.jsx  ValidationGroup.jsx  Validations.jsx
notebooks/: mas_analysis.ipynb  rating_log.jsonl
src/: app.py  initializer.py
src/agents/: condenser.py  injector.py  mixins.py  prompt.py  researcher.py  state.py  states.py  tools.py  validator.py
src/config/: agent.py  db.py  llm.py  registry.py
src/helpers/: pydantic_to_sql.py
src/manager/: llm.py
src/registry/: llm.py
src/routers/: agents.py  db.py  generation.py
src/schema/: agents.py  base.py  requests.py
src/scripts/: batch_injector.py  batch_researcher.py  batch_validator.py  main.py
src/scripts/data/: all_cwes.json  merged_test_input.csv
src/services/: llm.py  sqlite.py
src/services/local/: cache.py
src/utils/: common.py  const.py  decorators.py  enum.py  enums.py  filter.py
