[project]
name = "sophgenv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langgraph-prebuilt>=0.6.4",
    "numpy>=2.3.3",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "ruff>=0.14.0",
]
