[project]
name = "sophgenv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.3",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langgraph-prebuilt>=0.6.4",
    "logging>=0.4.9.6",
    "numpy>=2.3.3",
    "openai>=2.3.0",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
